- updated `F.$owner([new_owner])` added a new optional `new_owner` argument
- updated `F.builds` by adding a new meta information
- added `EXTENSION(code, [callback(err, module)])`
- added `F.extensions {Object}` for storing all extensions
- added a new command: `clear_owner` for removing all dependencies for the specific owner
- replaced return from the `controller.sse()` method to `Boolean`

========================
0.0.49
========================

- fixed typo in the flags in the file route by @fenddigital
- fixed typo in the file route by @KangGeunSu

========================
0.0.48
========================

- updated `GUID()` method by returning a valid GUID value (if the `length` argument is undefined)
- added a new schema type `GUID`
- added `String.isGUID()` for validating GUIDs
- fixed live reload for `.ts` files
- added output log for the hostname of live reload
- improved live reload by sending a filename of changed file
- fixed internal stats
- improved middleware
- added support for inline middleware for `ROUTE()` method in the form `ROUTE('GET / &middlewareA &middlewareB')`
- added `/middleware/` directory for storing middleware
- added `directory_middleware` config key
- added `PATH.middleware()` method
- added `USE(middleware, url, type, [first])` method assigns specified middleware to routes
- replaced `MIDDLEWARE()` to `NEWMIDDLEWARE()` (the old name has remained)

========================
0.0.47
========================

- fixed unhandled error until destroying WebSocket
- added missing properties into the `UIStreamMessage`
- fixed parsing dates (lower than 1.1.1970) in the schemas
- fixed applying `filter` argument in the `BACKUP()` method
- improved bundle generator in the `$ total4` executable
- changed arguments position in the `controller.stream()` method
- improved `end` event in the FlowStream messages
- added `terminate` event to the FlowStream messages
- fixed `pause` state in the outputs in the FlowStream

========================