@@ -23,6 +23,7 @@
 - added `F.extensions {Object}` for storing all extensions
 - added a new command: `clear_owner` for removing all dependencies for the specific owner
 - replaced return from the `controller.sse()` method to `Boolean`
+- fixed API routing with `default_root` by [Martin Smola](https://github.com/molda)
 
 ========================
 0.0.49
